finished the basic HTML structure of the portfolio and added the code for the reset CSS file

--- a/index.html
+++ b/index.html
@@ -21,28 +21,70 @@
     </nav>
 </header>
 
-<main>
-<section class= "section">
+<!--Hero Banner-->
+<section class="hero-banner">
+<div>
+<h2>Welcome to My Portfolio!</h2>
+</div>
+</section>
+
+<!--About Me Section-->
+<main> 
+<section class= "section" id= "about">
     <h2>About Me</h2>
     <div>
         <p>
-
+            Helvetica put a bird on it church-key Blue Bottle banjo bespoke brunch Etsy authentic Marfa quinoa typewriter
+            plaid
+            direct trade small batch wayfarers bicycle rights cliche craft beer gastropub single-origin coffee Godard
+            Carles you
+            probably haven't heard of them irony pickled kitsch synth sriracha gentrify literally heirloom blog Truffaut
+            paleo
+            scenester
         </p>
     </div>
 </section>
 
+<!--Projects Section-->
 <section class= "section" id= "projects">
     <h3>Projects</h3>
     <div class= "flex-container">
 
-    <a href= "#projectone" class= "flex-item projectone">
-
+    <a href= "projectone" class= "flex-item projectone">
+    <div>
+    <h3>Code Refactor</h3>
+    <p>HTML</p>   
+    </div>
     </a>
 
-    <a>
-
-
+    <a href= "projecttwo" class= "flex-item projecttwo">
+    <div>
+    <h3>Project Two</h3>
+    <p>CSS</p>  
+    </div>    
     </a>
+
+    <a href= "projectthree" class= "flex-item projectthree">
+    <div>
+    <h3>Project Three</h3>
+    <p>Javascript</p>   
+    </div>
+    </a>
+
+    <a href= "projectfour" class= "flex-item projectfour">
+    <div>
+    <h3>Project Four</h3>
+    <p>Node</p>   
+    </div>
+    </a>
+
+    <a href= "projectfive" class= "flex-item projectfive">
+    <div>
+    <h3>Project Five</h3>
+    <p>HTML/CSS</p>   
+    </div>
+    </a>
+
     </div>
 </section>
 
@@ -52,8 +94,11 @@
 <div>
     <address>
         <a href= "tel:+19196087679">919.608.7679</a>
+        <div></div>
         <a href= "mailto:brob92993@gmail.com">brob92993@gmail.com</a>
+        <div></div>
         <a href= "">Github</a>
+        <div></div>
         <a href= "">Linkdin</a>
     </address>
 </div>
