--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <header>
-    <h1>Brian Robinson // Web Developer</h1>
+    <h1>Brian Robinson</h1>
     <nav>
         <a href= "#about">About Me</a>
         <a href= "#projects">Projects</a>
@@ -29,7 +29,7 @@
 </section>
 
 <!--About Me Section-->
-<main> 
+<mai class= "wrapper"> 
 <section class= "section" id= "about">
     <h2>About Me</h2>
     <div>
@@ -88,14 +88,14 @@
     </div>
 </section>
 
-
+<!--Contact Me Section-->
 <footer class= "section" id= "contact">
-<h4>Contact Me</h4>
+<h3>Contact Me</h3>
 <div>
     <address>
-        <a href= "tel:+19196087679">919.608.7679</a>
+        <a href= "tel:+19196087679"> Phone: 919.608.7679</a>
         <div></div>
-        <a href= "mailto:brob92993@gmail.com">brob92993@gmail.com</a>
+        <a href= "mailto:brob92993@gmail.com">Email: brob92993@gmail.com</a>
         <div></div>
         <a href= "">Github</a>
         <div></div>
