more updates to the CSS to correct the projects section flex boxes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </section>
 
 <!--Contact Me Section-->
-<footer class= "section" id= "contact">
+<footer class= "section contact" id= "contact">
 <h3>Contact Me</h3>
 <div>
     <address>
