further updated CSS styling to feature the first project and added an avatar above the about me page

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
 </section>
 
 <!--About Me Section-->
-<mai class= "wrapper"> 
+<main class= "wrapper"> 
 <section class= "section" id= "about">
+    <div>
+        <img src= "images/avatar-icon.png" alt= "Real Picture of Me Coming Soon!">    
+    </div>
     <h2>About Me</h2>
     <div>
         <p>
@@ -90,16 +93,16 @@
 
 <!--Contact Me Section-->
 <footer class= "section contact" id= "contact">
-<h3>Contact Me</h3>
+<h4>Contact Me</h4>
 <div>
     <address>
         <a href= "tel:+19196087679"> Phone: 919.608.7679</a>
         <div></div>
         <a href= "mailto:brob92993@gmail.com">Email: brob92993@gmail.com</a>
         <div></div>
-        <a href= "">Github</a>
+        <a href= "">Github Repository</a>
         <div></div>
-        <a href= "">Linkdin</a>
+        <a href= "">Linkdin Profile</a>
     </address>
 </div>
 </footer>
