--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
     <h2>About Me</h2>
     <div>
         <p>
-            Helvetica put a bird on it church-key Blue Bottle banjo bespoke brunch Etsy authentic Marfa quinoa typewriter
-            plaid
-            direct trade small batch wayfarers bicycle rights cliche craft beer gastropub single-origin coffee Godard
-            Carles you
-            probably haven't heard of them irony pickled kitsch synth sriracha gentrify literally heirloom blog Truffaut
-            paleo
-            scenester
+             Hello world! My name's Brian and I'm an aspiring web developer. I have a background in criminal justice and criminology, but have always had a passion for computers. 
+             I am currently a student in the Coding Bootcamp at the University of North Carolina at Charlotte. Below you will see some of the projects that i have done in the 
+             class, and places that you can contact me! Enjoy.
+
         </p>
     </div>
 </section>
@@ -53,10 +50,10 @@
     <h3>Projects</h3>
     <div class= "flex-container">
 
-    <a href= "projectone" class= "flex-item projectone">
+    <a href= "https://brob92993.github.io/Week1-HW/" class= "flex-item projectone">
     <div>
     <h3>Code Refactor</h3>
-    <p>HTML</p>   
+    <p>HTML/CSS</p>   
     </div>
     </a>
 
@@ -100,9 +97,8 @@
         <div></div>
         <a href= "mailto:brob92993@gmail.com">Email: brob92993@gmail.com</a>
         <div></div>
-        <a href= "">Github Repository</a>
+        <a href= "https://github.com/brob92993">Github Repository</a>
         <div></div>
-        <a href= "">Linkdin Profile</a>
     </address>
 </div>
 </footer>
