added link to my resume, updated contact section

--- a/index.html
+++ b/index.html
@@ -47,41 +47,41 @@
 
 <!--Projects Section-->
 <section class= "section" id= "projects">
-    <h3>Projects</h3>
+    <h3>Project Repositories</h3>
     <div class= "flex-container">
 
-    <a href= "https://brob92993.github.io/Week1-HW/" class= "flex-item projectone">
+    <a href= "https://github.com/brob92993/Week1-HW.git" class= "flex-item projectone">
     <div>
     <h3>Code Refactor</h3>
     <p>HTML/CSS</p>   
     </div>
     </a>
 
-    <a href= "projecttwo" class= "flex-item projecttwo">
+    <a href= "https://github.com/Donchiz77/Hiketunez.git" class= "flex-item projecttwo">
     <div>
-    <h3>Project Two</h3>
-    <p>CSS</p>  
+    <h3>HikeTunes Project</h3>
+    <p>HTML/CSS/Javascript</p>  
     </div>    
     </a>
 
-    <a href= "projectthree" class= "flex-item projectthree">
+    <a href= "https://github.com/brob92993/Week5-WeeklyPlanner.git" class= "flex-item projectthree">
     <div>
-    <h3>Project Three</h3>
+    <h3>Weekly Planner</h3>
+    <p>HTML/Javascript</p>   
+    </div>
+    </a>
+
+    <a href= "https://github.com/brob92993/Week3-PasswordGen.git" class= "flex-item projectfour">
+    <div>
+    <h3>Random Password Generator</h3>
     <p>Javascript</p>   
     </div>
     </a>
 
-    <a href= "projectfour" class= "flex-item projectfour">
+    <a href= "https://github.com/brob92993/ReadmeGenerator.git" class= "flex-item projectfive">
     <div>
-    <h3>Project Four</h3>
+    <h3>Professional Readme Generator</h3>
     <p>Node</p>   
-    </div>
-    </a>
-
-    <a href= "projectfive" class= "flex-item projectfive">
-    <div>
-    <h3>Project Five</h3>
-    <p>HTML/CSS</p>   
     </div>
     </a>
 
@@ -98,6 +98,10 @@
         <a href= "mailto:brob92993@gmail.com">Email: brob92993@gmail.com</a>
         <div></div>
         <a href= "https://github.com/brob92993">Github Repository</a>
+        <div></div>
+        <a href="https://LinkdIn.com/brob92993">LinkdIn Profile</a>
+        <div></div>
+        <a href = "assets/BARobinsonresume.pdf">My Resume</a>
         <div></div>
     </address>
 </div>
