updated linkdin info

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div></div>
         <a href= "https://github.com/brob92993">Github Repository</a>
         <div></div>
-        <a href="https://LinkdIn.com/brob92993">LinkdIn Profile</a>
+        <a href="https://linkedin.com/in/brob92993">LinkdIn Profile</a>
         <div></div>
         <a href ="assets/Brian2021Resume.pdf">My Resume</a>
         <div></div>
