updated with pages for detailed project view

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title> Brian's Web Development Portfolio</title>
+   <title> Brian Robinson: Web Development Portfolio</title>
    <link rel= "stylesheet" href= "./styles/reset.css"/>
    <link rel= "stylesheet" href= "./styles/style.css"/>
  </head>
@@ -50,7 +50,7 @@
     <h3>Project Repositories</h3>
     <div class= "flex-container">
 
-    <a href= "https://github.com/brob92993/Week1-HW.git" class= "flex-item projectone">
+    <a href= "./projectone.html" class= "flex-item projectone">
     <div>
     <h3>Code Refactor</h3>
     <p>HTML/CSS</p>   
