updated first project page

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
 <!--Projects Section-->
 <section class= "section" id= "projects">
-    <h3>Project Repositories</h3>
+    <h3>Projects</h3>
     <div class= "flex-container">
 
     <a href= "./projectone.html" class= "flex-item projectone">
     <div>
-    <h3>Code Refactor</h3>
-    <p>HTML/CSS</p>   
+    <h3>Team Profile Generator</h3>
+    <p>NodeJS/JavaScript/HTML</p>   
     </div>
     </a>
 
