--- a/projectone.html
+++ b/projectone.html
@@ -13,7 +13,7 @@
 
 <body>
 <header>
-    <h1>Project One</h1>
+    <h1>Team Profile Generator</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href= "#about">About</a>
@@ -25,7 +25,7 @@
 <!--Hero Banner-->
 <section class="hero-banner">
 <div>
-<h2>Code Refactor</h2>
+<h2>Team Profile Generator</h2>
 </div>
 </section>
 
@@ -38,7 +38,8 @@
     <h2>About</h2>
     <div>
         <p>
-          About the project
+            The Team Profile Generator is a Node.js command-line application that takes in information about employees on a software engineering team, 
+            then generates an HTML webpage that displays summaries for each person.
 
         </p>
     </div>
@@ -48,10 +49,10 @@
     <h3>Project</h3>
     <div class= "flex-container">
 
-    <a href= "https://github.com/brob92993/Week1-HW.git" class= "flex-item projectone">
+    <a href= "https://github.com/brob92993/TeamProfileGen.git" class= "flex-item projectone">
     <div>
-    <h3>Code Refactor</h3>
-    <p>HTML/CSS</p>   
+    <h3>Team Profile Generator</h3>
+    <p>NodeJS/JavaScript/HTML</p>   
     </div>
     </a>
 </section>   
