finished project two details page

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="card-action">
               <a href="./projecttwo.html"> Details</a>
-              <a href="#">Website Link</a>
+              <a href="https://brob92993.github.io/Week3-PasswordGen/">Website Link</a>
             </div>
           </div>
       <!-- Promo Content 1 goes here -->
@@ -136,11 +136,10 @@
               <a href="#">Website Link</a>
             </div>
           </div>
-          
-      <!-- Promo Content 3 goes here -->
-      
     </div>
   </div>
+
+
 <!--
   <div class="row">
   
