--- a/projectone.html
+++ b/projectone.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Brian Robinson: Web Development Portfolio</title>
+  <title>Brian's Portfolio: ReadMe Generator</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
   <nav class="black" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Brian Robinson</a>
+      <a id="logo-container" href="./index.html" class="brand-logo">Brian Robinson</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="./index.html">Home</a></li>
         <li><a href="#project">Project Details</a></li>
