--- a/projecttwo.html
+++ b/projecttwo.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Brian Robinson: Web Development Portfolio</title>
+  <title>Brian's Portfolio: Password Generator</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
   <nav class="black" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Brian Robinson</a>
+      <a id="logo-container" href="./index.html" class="brand-logo">Brian Robinson</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="./index.html">Home</a></li>
         <li><a href="#project">Project Details</a></li>
@@ -52,47 +52,31 @@
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
       <h4 id="project">Details</h4>
-      <p class="left-align light">The Team Profile Generator is a Node.js command-line application that takes in information about employees on a software engineering team, 
-        then generates an HTML webpage that displays summaries for each person.</p>
+      <p class="left-align light">This password generator application will take in user input to generate a password between 8 and 128 characters, and has the option to include numbers, 
+          letters (uppercase & lowercase), and special characters.</p>
     </div>
   </div>
+
 
 <!--Project Details Section-->
 <div class="row">
-    <div class="col s12 m9 center">
+    <div class="col s12 m7 center">
       <div class="card">
         <div class="card-image">
-          <img src="">
+          <img src="./images/passwordgen/Screenshot-Password-Gen.png">
           <span class="card-title"></span>
         </div>
         <div class="card-content">
-          <p>Walkthrough of the application</p>
+          <p> The above is a screenshot of a randomly generated password with 15 characters that includes numbers and special characters.</p>
         </div>
         <div class="card-action">
-          <a href="">Check it out in Github</a>
+          <a href="https://github.com/brob92993/Week3-PasswordGen.git">Check it out in Github</a>
+          <a href="https://brob92993.github.io/Week3-PasswordGen/">Check out the live application</a>
         </div>
        </div>
     </div>
   </div>
-
-  <div class="row">
-    <div class="col s12 m9 center">
-      <div class="card">
-        <div class="card-image">
-          <img src="">
-          <span class="card-title"></span>
-        </div>
-        <div class="card-content">
-          <p>Use "npm run test" in the command line to run the tests listed above.</p>
-        </div>
-        <div class="card-action">
-         </div>
-       </div>
-    </div>
-  </div>
-
-  <!-- Promo Content 3 goes here -->
-  
+ 
 </div>
 
 </div>
