added detail page for project 3

--- a/projectthree.html
+++ b/projectthree.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Brian Robinson: Web Development Portfolio</title>
+  <title>Brian's Portfolio: Back-End-E-Commerce</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
   <nav class="black" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Brian Robinson</a>
+      <a id="logo-container" href="./index.html" class="brand-logo">Brian Robinson</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="./index.html">Home</a></li>
         <li><a href="#project">Project Details</a></li>
@@ -37,7 +37,7 @@
         <br><br>
         <h1 class="header center black-text text-lighten-5"></h1>
         <div class="row center">
-          <h5 class="header col s12 light">Random Password Generator</h5>
+          <h5 class="header col s12 light">Back-End E-Commerce Application</h5>
         </div>
         <div class="row center">
         </div>
@@ -52,47 +52,44 @@
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
       <h4 id="project">Details</h4>
-      <p class="left-align light">The Team Profile Generator is a Node.js command-line application that takes in information about employees on a software engineering team, 
-        then generates an HTML webpage that displays summaries for each person.</p>
+      <p class="left-align light"> I was tasked with building the back end for an e-commerce site by modifying starter code. I configured a working Express.js API and used Sequelize to interact with a MySQL database.
+    </p>
     </div>
   </div>
 
 <!--Project Details Section-->
 <div class="row">
-    <div class="col s12 m9 center">
+    <div class="col s12 m7 center">
       <div class="card">
         <div class="card-image">
-          <img src="">
+          <img src="./images/BackendEcommerce/ECommerceWalkthrough.gif">
           <span class="card-title"></span>
         </div>
         <div class="card-content">
           <p>Walkthrough of the application</p>
         </div>
         <div class="card-action">
-          <a href="">Check it out in Github</a>
+          <a href="https://github.com/brob92993/Back-End-E-Commerce.git">Check it out in Github</a>
         </div>
        </div>
     </div>
   </div>
 
   <div class="row">
-    <div class="col s12 m9 center">
+    <div class="col s12 m7 center">
       <div class="card">
         <div class="card-image">
-          <img src="">
+          <img src="./images/BackendEcommerce/CreateSchemaECommerce.png">
           <span class="card-title"></span>
         </div>
         <div class="card-content">
-          <p>Use "npm run test" in the command line to run the tests listed above.</p>
+          <p> To Create the Schema, run the following syntax in MySQL Workbench:</p>
         </div>
         <div class="card-action">
          </div>
        </div>
     </div>
   </div>
-
-  <!-- Promo Content 3 goes here -->
-  
 </div>
 
 </div>
