--- a/index.html
+++ b/index.html
@@ -113,13 +113,12 @@
     <div class="col s12 m3">
         <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
+              <span class="card-title">Back-End E-Commerce App</span>
+              <p>A back end for an e-commerce site using Sequelize with an Express.js API.</p>
             </div>
             <div class="card-action">
               <a href="./projectthree.html">Details</a>
-              <a href="#">Website Link</a>
+              <a href="https://github.com/brob92993/Back-End-E-Commerce.git">Repository Link</a>
             </div>
           </div>
       <!-- Promo Content 2 goes here -->
