updated fourth project detail page with screenshots and breakdown

--- a/projectfour.html
+++ b/projectfour.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Brian Robinson: Web Development Portfolio</title>
+  <title>Brian's Portfolio: Cooper & Dan's Toyboz</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
   <nav class="black" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Brian Robinson</a>
+      <a id="logo-container" href="./index.html" class="brand-logo">Brian Robinson</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="./index.html">Home</a></li>
         <li><a href="#project">Project Details</a></li>
@@ -37,7 +37,7 @@
         <br><br>
         <h1 class="header center black-text text-lighten-5"></h1>
         <div class="row center">
-          <h5 class="header col s12 light">Random Password Generator</h5>
+          <h5 class="header col s12 light">Cooper & Dan's Toybox</h5>
         </div>
         <div class="row center">
         </div>
@@ -52,38 +52,71 @@
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
       <h4 id="project">Details</h4>
-      <p class="left-align light">The Team Profile Generator is a Node.js command-line application that takes in information about employees on a software engineering team, 
-        then generates an HTML webpage that displays summaries for each person.</p>
+      <p class="center-align light">This was a group project done with 3 other classmates. We sought out to create an application that users would be able to purchase cat and dog accessories. 
+          The user can go through the existing list of cat and dog items, and when the user selects one of the items, 
+          the details and price about that specific item are populated. </p>
     </div>
   </div>
 
+  <div class="row">
+    <div class="col s12 center">
+      <h3><i class="mdi-content-send brown-text"></i></h3>
+      <h4 id="project">Technologies Used</h4>
+      <p class="center-align light">We used MySQL, NodeJS, Express, JavaScript, Handlebars, Heroku, & Bulma for this application </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col s12 center">
+      <h3><i class="mdi-content-send brown-text"></i></h3>
+      <h4 id="project">Installation/Usage</h4>
+      <p class="center-align light">To install necessary dependencies, run the following command: "npm i". </p> 
+      <p class="center-align light">To run the server in the CLI: "node server.js".</p>
+    </div>
+  </div> 
+
+
+  <div class="row">
+    <div class="col s12 center">
+      <h3><i class="mdi-content-send brown-text"></i></h3>
+      <h4 id="project">Future Development</h4>
+      <p class="center-align light"> Some future development ideas are as follows: 
+      <p class="center-align light"> Add a way to add your own items to sell on the marketplace</p>
+      <p class="center-align light"> Get a working wishlist and shopping cart to add each product and their prices through the use of models</p>
+      <p class="center-align light"> Add more pet options (snake, hamster, lizard, etc.) with a wider variety of products</p>
+      <p class="center-align light"> Add different language options for non-english speakers</p>
+      <p class="center-align light"> Contact with either support or sellers</p>
+    </div>
+  </div> 
+
 <!--Project Details Section-->
 <div class="row">
-    <div class="col s12 m9 center">
+    <div class="col s12 m7 center">
       <div class="card">
         <div class="card-image">
-          <img src="">
+          <img src="./images/CooperandDan/CooperDanWalkthrough.gif">
           <span class="card-title"></span>
         </div>
         <div class="card-content">
           <p>Walkthrough of the application</p>
         </div>
         <div class="card-action">
-          <a href="">Check it out in Github</a>
+          <a href="https://github.com/tloyzelle/Project-2.git">Check it out in Github</a>
+          <a href="https://cooper-and-dans-toybox.herokuapp.com/">Deployed Heroku Application</a>
         </div>
        </div>
     </div>
   </div>
 
   <div class="row">
-    <div class="col s12 m9 center">
+    <div class="col s12 m7 center">
       <div class="card">
         <div class="card-image">
-          <img src="">
+          <img src="./images/CooperandDan/workbenchschema.png">
           <span class="card-title"></span>
         </div>
         <div class="card-content">
-          <p>Use "npm run test" in the command line to run the tests listed above.</p>
+          <p>To Create the Schema, run the above syntax in MySQL Workbench.</p>
         </div>
         <div class="card-action">
          </div>
