--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
       <h4 id="about">About Me</h4>
-      <p class="left-align light">Hello world! My name's Brian and I'm an aspiring web developer. I have a background in criminal justice and criminology, but have always had a passion for computers. I am currently a student in the Coding Bootcamp at the University of North Carolina at Charlotte. Below you will see some of the projects that i have done in the class, and places that you can contact me! Enjoy.</p>
+      <p class="center-align light">Hello world! My name's Brian and I'm an aspiring web developer. I have a background in criminal justice and criminology, but have always had a passion for computers. I am currently a student in the Coding Bootcamp at the University of North Carolina at Charlotte. Below you will see some of the projects that i have done in the class, and places that you can contact me! Enjoy.</p>
     </div>
   </div>
 
@@ -113,12 +113,12 @@
     <div class="col s12 m3">
         <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">Back-End E-Commerce App</span>
+              <span class="card-title">Back-End E-Commerce</span>
               <p>A back end for an e-commerce site using Sequelize with an Express.js API.</p>
             </div>
             <div class="card-action">
               <a href="./projectthree.html">Details</a>
-              <a href="https://github.com/brob92993/Back-End-E-Commerce.git">Repository Link</a>
+              <a href="https://github.com/brob92993/Back-End-E-Commerce.git">Github Link</a>
             </div>
           </div>
       <!-- Promo Content 2 goes here -->
@@ -126,13 +126,12 @@
     <div class="col s12 m3">
         <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
+              <span class="card-title">Cooper & Dan's Toybox</span>
+              <p>Group project application for cat and dog accessories, using Javascript, Handlebars, and mySQL </p>
             </div>
             <div class="card-action">
               <a href="./projectfour.html">Details</a>
-              <a href="#">Website Link</a>
+              <a href="https://cooper-and-dans-toybox.herokuapp.com/">Website Link</a>
             </div>
           </div>
     </div>
