updated styling on the nav pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <nav class="black" role="navigation">
+  <nav class="red accent-2" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Brian Robinson</a>
       <ul class="right hide-on-med-and-down">
@@ -84,54 +84,54 @@
   <div class="row">
   
     <div class="col s12 m3">
-    <div class="card blue-grey darken-1">
+    <div class="card red accent-2">
         <div class="card-content white-text">
           <span class="card-title">Team Profile Generator</span>
           <p>Command Line Application Using NodeJS, JavaScript, & HTML</p>
         </div>
         <div class="card-action">
-          <a href="./projectone.html">Details</a>
-          <a href="https://github.com/brob92993/TeamProfileGen.git">Repository Link</a>
+          <a class="white-text" href="./projectone.html">Details</a>
+          <a class="white-text" href="https://github.com/brob92993/TeamProfileGen.git">Repository Link</a>
         </div>
       </div>
   <!-- Promo Content 1 goes here -->
 </div>
 
     <div class="col s12 m3">
-        <div class="card blue-grey darken-1">
+        <div class="card red accent-2">
             <div class="card-content white-text">
               <span class="card-title">Random Password Generator</span>
               <p>Simple web application that generates random passwords using JavaScript</p>
             </div>
             <div class="card-action">
-              <a href="./projecttwo.html"> Details</a>
-              <a href="https://brob92993.github.io/Week3-PasswordGen/">Website Link</a>
+              <a class="white-text" href="./projecttwo.html"> Details</a>
+              <a class="white-text" href="https://brob92993.github.io/Week3-PasswordGen/">Website Link</a>
             </div>
           </div>
       <!-- Promo Content 1 goes here -->
     </div>
     <div class="col s12 m3">
-        <div class="card blue-grey darken-1">
+        <div class="card red accent-2">
             <div class="card-content white-text">
               <span class="card-title">Back-End E-Commerce</span>
               <p>A back end for an e-commerce site using Sequelize with an Express.js API.</p>
             </div>
             <div class="card-action">
-              <a href="./projectthree.html">Details</a>
-              <a href="https://github.com/brob92993/Back-End-E-Commerce.git">Github Link</a>
+              <a class="white-text" href="./projectthree.html">Details</a>
+              <a class="white-text" href="https://github.com/brob92993/Back-End-E-Commerce.git">Github Link</a>
             </div>
           </div>
       <!-- Promo Content 2 goes here -->
     </div>
     <div class="col s12 m3">
-        <div class="card blue-grey darken-1">
+        <div class="card red accent-2">
             <div class="card-content white-text">
               <span class="card-title">Cooper & Dan's Toybox</span>
               <p>Group project application for cat and dog accessories, using Javascript, Handlebars, and mySQL </p>
             </div>
             <div class="card-action">
-              <a href="./projectfour.html">Details</a>
-              <a href="https://cooper-and-dans-toybox.herokuapp.com/">Website Link</a>
+              <a class="white-text" href="./projectfour.html">Details</a>
+              <a class="white-text" href="https://cooper-and-dans-toybox.herokuapp.com/">Website Link</a>
             </div>
           </div>
     </div>
