--- a/projectthree.html
+++ b/projectthree.html
@@ -11,7 +11,7 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <nav class="black" role="navigation">
+  <nav class="red accent-2" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="./index.html" class="brand-logo">Brian Robinson</a>
       <ul class="right hide-on-med-and-down">
