updated project details pages

--- a/projectone.html
+++ b/projectone.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Brian's Portfolio: ReadMe Generator</title>
+  <title>Brian's Portfolio: Team Profile Generator</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -54,13 +54,13 @@
       <h3><i class="mdi-content-send brown-text"></i></h3>
       <h4 id="project">Details</h4>
       <p class="left-align light">The Team Profile Generator is a Node.js command-line application that takes in information about employees on a software engineering team, 
-        then generates an HTML webpage that displays summaries for each person.</p>
+        then generates an HTML webpage that displays summaries for each person. There is also a unit test for this application so that you can ensure that each part of the code works.</p>
     </div>
   </div>
 
 <!--Project Details Section-->
 <div class="row">
-    <div class="col s12 m9 center">
+    <div class="col s12 m9 center-align">
       <div class="card">
         <div class="card-image">
           <img src="./images/teamprofilegen/FullTeamProfileWalkthrough.gif">
@@ -77,7 +77,7 @@
   </div>
 
   <div class="row">
-    <div class="col s12 m9 center">
+    <div class="col s12 m9">
       <div class="card">
         <div class="card-image">
           <img src="./images/teamprofilegen/SuccessfulTestsPic.png">
