--- a/projecttwo.html
+++ b/projecttwo.html
@@ -52,15 +52,15 @@
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
       <h4 id="project">Details</h4>
-      <p class="left-align light">This password generator application will take in user input to generate a password between 8 and 128 characters, and has the option to include numbers, 
-          letters (uppercase & lowercase), and special characters.</p>
+      <p class="left-align light">Password Generator is an application that enables the user to generate random passwords based on criteria that they’ve selected. The password must be between 8 and 128 characters, with the option to include numbers, 
+        letters (uppercase & lowercase), and special characters. This application runs in the browser and features dynamically updated HTML and CSS powered by JavaScript code. It has a clean and polished, responsive user interface that adapts to multiple screen sizes.</p>
     </div>
   </div>
 
 
 <!--Project Details Section-->
 <div class="row">
-    <div class="col s12 m7 center">
+    <div class="col s12 m8 center">
       <div class="card">
         <div class="card-image">
           <img src="./images/passwordgen/Screenshot-Password-Gen.png">
