updates to css for style linkage

--- a/projectone.html
+++ b/projectone.html
@@ -7,9 +7,10 @@
   <title>Brian's Portfolio: Team Profile Generator</title>
 
   <!-- CSS  -->
+ <!-- <link href="./styles/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="/styles/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="./styles/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+ 
 </head>
 <body>
   <nav class="red accent-2" role="navigation">
