--- a/projectfour.html
+++ b/projectfour.html
@@ -7,8 +7,8 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="/styles/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="./styles/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+ <!-- <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
 </head>
 <body>
   <nav class="red accent-2" role="navigation">
