updates to technologies used, project details, and subtle style changes

--- a/projectfour.html
+++ b/projectfour.html
@@ -61,15 +61,43 @@
   <div class="row">
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
-      <h4 id="project">Technologies Used</h4>
-      <p class="center-align light">We used MySQL, NodeJS, Express, JavaScript, Handlebars, Heroku, & Bulma for this application </p>
-    </div>
+      <h4 id="about">Technologies Used</h4>
+      </div>
   </div>
+
+    <div class="row center-align">
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/nodeJS.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/npm_logo.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/JS.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/expresshandlebars.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/MySQL.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/sequelize.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/expressjs.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/bulma.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/insomnia.png">
+    </div>
 
   <div class="row">
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
-      <h4 id="project">Installation/Usage</h4>
+      <h4 id="project">Installation/ Application Usage</h4>
       <p class="center-align light">To install necessary dependencies, run the following command: "npm i". </p> 
       <p class="center-align light">To run the server in the CLI: "node server.js".</p>
     </div>
@@ -91,7 +119,7 @@
 
 <!--Project Details Section-->
 <div class="row">
-    <div class="col s12 m8 center">
+    <div class="col s12 m7 center">
       <div class="card">
         <div class="card-image">
           <img src="./images/CooperandDan/CooperDanWalkthrough.gif">
@@ -107,9 +135,10 @@
        </div>
     </div>
   </div>
-
+    </div>
+    
   <div class="row">
-    <div class="col s12 m8 center">
+    <div class="col s12 m7 center">
       <div class="card">
         <div class="card-image">
           <img src="./images/CooperandDan/workbenchschema.png">
