--- a/projectthree.html
+++ b/projectthree.html
@@ -52,14 +52,51 @@
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
       <h4 id="project">Details</h4>
-      <p class="left-align light"> I was tasked with building the back end for an e-commerce site by modifying starter code. I configured a working Express.js API and used Sequelize to interact with a MySQL database.
+      <p class="center-align light"> I was tasked with building the back end for an e-commerce site so that the company can compete with other e-commerce companies. 
+        I configured a working Express.js API and used Sequelize to interact with a MySQL database.
     </p>
     </div>
   </div>
 
+  <div class="row">
+    <div class="col s12 center">
+      <h3><i class="mdi-content-send brown-text"></i></h3>
+      <h4 id="about">Technologies Used</h4>
+      </div>
+  </div>
+
+    <div class="row">
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/expressjs.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/npm_logo.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/gitbash.jpg">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/MySQL.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/sequelize.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/insomnia.png">
+    </div>
+    </div>
+
 <!--Project Details Section-->
+
 <div class="row">
-    <div class="col s12 m8 center">
+  <div class="col s12 center">
+    <h3><i class="mdi-content-send brown-text"></i></h3>
+    <h4 id="about">Application Usage</h4>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col s12 m7 center">
       <div class="card">
         <div class="card-image">
           <img src="./images/BackendEcommerce/ECommerceWalkthrough.gif">
@@ -76,7 +113,7 @@
   </div>
 
   <div class="row">
-    <div class="col s12 m8 center">
+    <div class="col s12 m7 center">
       <div class="card">
         <div class="card-image">
           <img src="./images/BackendEcommerce/CreateSchemaECommerce.png">
