--- a/projecttwo.html
+++ b/projecttwo.html
@@ -52,15 +52,41 @@
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
       <h4 id="project">Details</h4>
-      <p class="left-align light">Password Generator is an application that enables the user to generate random passwords based on criteria that they’ve selected. The password must be between 8 and 128 characters, with the option to include numbers, 
+      <p class="center-align light">Password Generator is an application that enables the user to obtain greater password security by generating a password based on criteria that they’ve selected. The password must be between 8 and 128 characters, with the option to include numbers, 
         letters (uppercase & lowercase), and special characters. This application runs in the browser and features dynamically updated HTML and CSS powered by JavaScript code. It has a clean and polished, responsive user interface that adapts to multiple screen sizes.</p>
     </div>
   </div>
 
+  <div class="row">
+    <div class="col s12 center">
+      <h3><i class="mdi-content-send brown-text"></i></h3>
+      <h4 id="about">Technologies Used</h4>
+      </div>
+  </div>
+
+    <div class="row">
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/html5.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/css3.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/JS.png">
+    </div>
+    </div>
 
 <!--Project Details Section-->
+
 <div class="row">
-    <div class="col s12 m8 center">
+  <div class="col s12 center">
+    <h3><i class="mdi-content-send brown-text"></i></h3>
+    <h4 id="about">Application Usage</h4>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col s12 m7 center">
       <div class="card">
         <div class="card-image">
           <img src="./images/passwordgen/Screenshot-Password-Gen.png">
