--- a/index.html
+++ b/index.html
@@ -57,6 +57,82 @@
     </div>
   </div>
 
+
+  <div class="row">
+    <div class="col s12 center">
+      <h3><i class="mdi-content-send brown-text"></i></h3>
+      <h4 id="about">Skills</h4>
+      </div>
+  </div>
+
+    <div class="row">
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/html5.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/gitbash.jpg">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/css3.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/JS.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/jQuery.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/bootstrap.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/bulma.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/materialize.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/nodeJS.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/npm_logo.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/CRUD.png">
+    </div>
+    <div class="col s1">
+        <img class="responsive-img" src="./images/logos/mvc.png">
+    </div>
+    </div>
+
+    <div class="row">
+      <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/expressjs.png">
+      </div>
+      <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/expresshandlebars.png">
+      </div>
+      <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/MySQL.png">
+      </div>
+      <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/sequelize.png">
+      </div>
+      <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/nosql.png">
+      </div>
+      <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/mongodb.png">
+      </div>
+      <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/insomnia.png">
+      </div>
+      <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/oop.png">
+      </div>
+      </div>
+
+
+
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
@@ -94,7 +170,7 @@
           <a class="white-text" href="https://github.com/brob92993/TeamProfileGen.git">Repository Link</a>
         </div>
       </div>
-  <!-- Promo Content 1 goes here -->
+  
 </div>
 
     <div class="col s12 m3">
@@ -108,7 +184,7 @@
               <a class="white-text" href="https://brob92993.github.io/Week3-PasswordGen/">Website Link</a>
             </div>
           </div>
-      <!-- Promo Content 1 goes here -->
+     
     </div>
     <div class="col s12 m3">
         <div class="card red accent-2">
@@ -121,7 +197,8 @@
               <a class="white-text" href="https://github.com/brob92993/Back-End-E-Commerce.git">Github Link</a>
             </div>
           </div>
-      <!-- Promo Content 2 goes here -->
+
+      
     </div>
     <div class="col s12 m3">
         <div class="card red accent-2">
