--- a/projectone.html
+++ b/projectone.html
@@ -54,14 +54,52 @@
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
       <h4 id="project">Details</h4>
-      <p class="left-align light">The Team Profile Generator is a Node.js command-line application that takes in information about employees on a software engineering team, 
+      <p class="center-align light">The Team Profile Generator is a Node.js command-line application that takes in information about employees on a software engineering team, 
         then generates an HTML webpage that displays summaries for each person. There is also a unit test for this application so that you can ensure that each part of the code works.</p>
     </div>
   </div>
 
+  <div class="row">
+    <div class="col s12 center">
+      <h3><i class="mdi-content-send brown-text"></i></h3>
+      <h4 id="about">Technologies Used</h4>
+      </div>
+  </div>
+
+    <div class="row">
+    <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/oop.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/gitbash.jpg">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/nodeJS.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/npm_logo.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/JS.png">
+    </div>
+    <div class="col s1">
+      <img class="circle responsive-img" src="./images/logos/html5.png">
+    </div>
+   
+
+
+
+    <div class="row">
+      <div class="col s12 center">
+        <h3><i class="mdi-content-send brown-text"></i></h3>
+        <h4 id="project"> Installation/Application Usage</h4>
+        <p class="center-align light">To install necessary dependencies, run the following command: "npm i". </p> 
+        <p class="center-align light">To run the application in the CLI: "node index.js".</p>
+      </div>
+    </div>     
 <!--Project Details Section-->
 <div class="row">
-    <div class="col s12 m9 center-align">
+    <div class="col s12 m7 center-align">
       <div class="card">
         <div class="card-image">
           <img src="./images/teamprofilegen/FullTeamProfileWalkthrough.gif">
@@ -78,7 +116,7 @@
   </div>
 
   <div class="row">
-    <div class="col s12 m9">
+    <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
           <img src="./images/teamprofilegen/SuccessfulTestsPic.png">
