--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a id="logo-container" href="#" class="brand-logo">Brian Robinson</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#about">About Me</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact Me</a></li>
 
@@ -25,6 +26,7 @@
       <ul id="nav-mobile" class="sidenav">
           
         <li><a href="#about">About Me</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -38,7 +40,7 @@
         <br><br>
         <h1 class="header center black-text text-lighten-5"></h1>
         <div class="row center">
-          <h5 class="header col s12 light">Welcome to my web development portfolio!</h5>
+          <h5 class="header col s12 light">Welcome to my Web Development Portfolio!</h5>
         </div>
         <div class="row center">
         </div>
@@ -53,7 +55,13 @@
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
       <h4 id="about">About Me</h4>
-      <p class="center-align light">Hello world! My name's Brian and I'm an aspiring web developer. I have a background in criminal justice and criminology, but have always had a passion for computers. I am currently a student in the Coding Bootcamp at the University of North Carolina at Charlotte. Below you will see some of the projects that i have done in the class, and places that you can contact me! Enjoy.</p>
+      <p class="center-align light">I'm a Full Stack Developer with almost a year of experience in responsive web development, both front-end & back-end. 
+        I Attended the University of North Carolina at Charlotte, where I received a BS in Criminal JUstice & Psychology. In October 2021, I completed a Certificate in Full Stack Web Development from UNC Charlotte where I learned best practices for designing powerful mobile-friendly websites and applications. 
+        I currently work full-time as a Fraud professional for Wells Fargo, and am looking to start my professional Web Development career.</p>
+    <div></div>
+      <p class= "center-align light">
+        <a class="button white waves-effect waves-light btn black-text" href ="assets/Brian2021Resume.pdf">Download My Resume</a>
+      </p>  
     </div>
   </div>
 
@@ -61,7 +69,7 @@
   <div class="row">
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
-      <h4 id="about">Skills</h4>
+      <h4 id="skills">Skills</h4>
       </div>
   </div>
 
@@ -137,7 +145,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 id="projects" class="header light">My Projects</h5>
+          <h3 id="projects" class="header light">My Projects</h3>
         </div>
       </div>
     </div>
@@ -281,7 +289,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 id="contact" class="header col s12 light">Contact</h5>
+          <h3 id="contact" class="header col s12 light">Contact</h3>
         </div>
       </div>
     </div>
