--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <div class="col s12 center">
       <h3><i class="mdi-content-send brown-text"></i></h3>
       <h4 id="about">About Me</h4>
-      <p class="center-align light">I'm a Full Stack Developer with almost a year of experience in responsive web development, both front-end & back-end. 
-        I Attended the University of North Carolina at Charlotte, where I received a BS in Criminal JUstice & Psychology. In October 2021, I completed a Certificate in Full Stack Web Development from UNC Charlotte where I learned best practices for designing powerful mobile-friendly websites and applications. 
-        I currently work full-time as a Fraud professional for Wells Fargo, and am looking to start my professional Web Development career.</p>
+      <p class="center-align light">I'm a Full Stack Developer with almost a year of experience in responsive web development, both front-end & back-end. I Attended the University of North Carolina at Charlotte, where I received a BS in Criminal Justice & Psychology. I am currently in my third year as a full-time Fraud professional for Wells Fargo
+In October 2021, I completed a Certificate in Full Stack Web Development from UNC Charlotte where I learned best practices for designing powerful mobile-friendly websites and applications. I also learned how much I enjoy the coding process, from problem solving to group collaboration, and I am looking forward to starting my professional Web Development career.
+</p>
     <div></div>
       <p class= "center-align light">
         <a class="button white waves-effect waves-light btn black-text" href ="assets/Brian2021Resume.pdf">Download My Resume</a>
