updated email in the contacts section

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ In October 2021, I completed a Certificate in Full Stack Web Development from UN
                 -
             </div>
 
-            <li><a class=" button white waves-effect waves-light btn-small black-text" href="mailto:brob92993@gmail.com">Email</a></li>
+            <li><a class=" button white waves-effect waves-light btn-small black-text" href="mailto:brob92993@gmail.com">brob92993@gmail.com</a></li>
             <div>
                 -
             </div>
