updated with final project added to portfolio

--- a/index.html
+++ b/index.html
@@ -240,20 +240,20 @@ In October 2021, I completed a Certificate in Full Stack Web Development from UN
       </div>
   
 </div>
-<!--
-    <div class="col s12 m3">
+<div class="col s12 m3">
         <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">Random Password Generator</span>
-              <p>Simple web application that generates random passwords using JavaScript</p>
+              <span class="card-title">HelpHub</span>
+              <p>A group project application that allows users to view gigs or tasks around their city</p>
             </div>
             <div class="card-action">
-              <a href="./projecttwo.html"> Details</a>
-              <a href="#">Website Link</a>
+              <a href="./projectsix.html"> Details</a>
+              <a href="https://helphub2022.herokuapp.com">Website Link</a>
             </div>
           </div>
      
     </div>
+  <!--
     <div class="col s12 m3">
         <div class="card blue-grey darken-1">
             <div class="card-content white-text">
