--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@ In October 2021, I completed a Certificate in Full Stack Web Development from UN
       <div class="col s1">
         <img class="circle responsive-img" src="./images/logos/oop.png">
       </div>
+      <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/react.png">
+      </div>
+      <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/auth0.png">
+      </div>
+      <div class="col s1">
+        <img class="circle responsive-img" src="./images/logos/heroku.png">
+      </div>
       </div>
 
 
@@ -241,14 +250,14 @@ In October 2021, I completed a Certificate in Full Stack Web Development from UN
   
 </div>
 <div class="col s12 m3">
-        <div class="card blue-grey darken-1">
+        <div class="card red accent-2">
             <div class="card-content white-text">
               <span class="card-title">HelpHub</span>
-              <p>A group project application that allows users to view gigs or tasks around their city</p>
+              <p>A group project application that allows users to view gigs or tasks around their city. Using NPM, Jacascript, React, Auth0, MySQL, & Bootstrap.</p>
             </div>
             <div class="card-action">
-              <a href="./projectsix.html"> Details</a>
-              <a href="https://helphub2022.herokuapp.com">Website Link</a>
+              <a class= "white-text" href="./projectsix.html"> Details</a>
+              <a class= "white-text" href="https://helphub2022.herokuapp.com">Website Link</a>
             </div>
           </div>
      
