--- a/projectsix.html
+++ b/projectsix.html
@@ -123,7 +123,7 @@
 
 <!--Project Details Section-->
 <div class="row">
-    <div class="col s12 m7 center">
+    <div class="col s12 m7 center-align">
       <div class="card">
         <div class="card-image">
           <img src="./images/HelpHub/helpHubHomepage.png">
